# flexorama

./: .gitignore  AGENTS.md  Cargo.toml  MISTRAL_IMPLEMENTATION_SUMMARY.md  README.md  lcov.info
aixplosion/: config.toml
docs/: ACP_COMPLIANCE_ANALYSIS.md  ACP_IMPLEMENTATION_PLAN.md  ACP_USAGE.md  AIXPLOSION_LOGO_IMPLEMENTATION.md  BASH_TOOL_COMPLETE.md  CLAUDE_HOOKS.md  CLEAR_COMMAND_SUMMARY.md  CONTEXT_COMMAND_SUMMARY.md  CONTEXT_FILES.md  CONTEXT_ONLY_IMPLEMENTATION.md  CONTEXT_ONLY_MODE.md  CONTEXT_SYNTAX.md  ESC-CANCELLATION.md  GEMINI_SUPPORT.md  IMAGE_SUPPORT_PLAN.md  IMAGE_SUPPORT_TEST_PLAN.md  IMPLEMENTATION_SUMMARY.md  LOGGING_CLEANUP_SUMMARY.md  LOGGING_UPDATE.md  LOGGING_UPDATE_COMPLETE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_REFRESH_OPTIMIZATION_SUMMARY.md  MCP_SUPPORT.md  PLAN_MODE.md  PRETTY_TOOL_OUTPUT.md  SHELL_COMMANDS_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  TEST_CONTEXT_FILES.md  TOOL_OUTPUT_5LINE_LIMIT.md  USER_GUIDE.md  YOLO_MODE_IMPLEMENTATION.md  ctrl-r-reverse-search.md  test-coverage-report.md  todo-management.md
expense-tracker/: README.md  database.js  expenses.db  package-lock.json  package.json  server.js
src/: agent.rs  anthropic.rs  autocomplete.rs  cli.rs  commands.rs  config.rs  conversation.rs  csrf.rs  custom_commands.rs  database.rs  formatter.rs  formatter_tests.rs  gemini.rs  help.rs  hooks.rs  image.rs  input.rs  interactive.rs  lib.rs  llm.rs  logo.rs  main.rs  mcp.rs  mistral.rs  ollama.rs  openai.rs  output.rs  processing.rs  security.rs  skill.rs  subagent.rs  tui.rs  tui_tests.rs  utils.rs  web.rs
web/: app.js  (+1 more)
(+73 files in other folders)
