[package]
name = "flexorama"
version = "0.1.0"
edition = "2021"

[lib]
name = "flexorama"
path = "src/lib.rs"

[[bin]]
name = "flx"
path = "src/main.rs" 

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
dialoguer = "0.10"
shellexpand = "3.0"
regex = "1.0"
base64 = "0.22"
path-absolutize = "3.0"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", features = ["macros", "json"] }
toml = "0.8"
log = { version = "0.4", features = ["std"] }
indicatif = "0.17"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
which = "4.0"
glob = "0.3"
crossterm = "0.29"
ratatui = "0.30"
ansi-to-tui = "8.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
bytes = "1"
arboard = "3.0"
tower-http = { version = "0.5", features = ["cors"] }
# ACP support
agent-client-protocol = "0.6"
agent-client-protocol-schema = "0.6"
thiserror = "1.0"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
serial_test = "3.0"
